--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "team-challenge",
+  "homepage": "http://kefkiroth.github.io/team-challenge/build",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
